<resources>
    <string name="app_name">Candy Crush</string>
    <string name="player_two">PLAYER 2</string>
    <string name="moves">moves</string>
    <string name="score">Score</string>
    <string name="player_one">PLAYER 1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="title_no_record">No Records Added yet</string>
    <string name="practice">PRACTICE</string>
    <string name="play">PLAY</string>
    <string name="name">adarsh</string>
    <string name="your_balance_is">your balance is</string>
    <string name="amount">100₹</string>
    <string name="add_amount">add amount</string>
    <string name="_30">30₹</string>
    <string name="_50">50₹</string>
    <string name="_100">100₹</string>
    <string name="_500">500₹</string>
</resources>