<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.activities.AddAmountActivity">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_30"
        android:layout_width="wrap_content"
        android:text="@string/_30"
        android:layout_margin="@dimen/_margin_40"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_50"
        android:layout_margin="@dimen/_margin_40"
        android:layout_width="wrap_content"
        android:text="@string/_50"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_100"
        android:layout_margin="@dimen/_margin_40"
        android:layout_width="wrap_content"
        android:text="@string/_100"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_500"
        android:layout_margin="@dimen/_margin_40"
        android:layout_width="wrap_content"
        android:text="@string/_500"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        />
</LinearLayout>