<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/aap_gradient_color_background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/text_background"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/player_two"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/moves"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:background="@drawable/text_background"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/score"
            android:textStyle="bold"
            android:background="@drawable/text_background"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/player1_gradient_color_background"
            android:layout_weight="1">
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnWidth="90dp"
                android:numColumns="4"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:id="@+id/gl_board_main"
                android:background="@drawable/player1_gradient_color_background"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="11dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_margin="6dp"
                android:layout_gravity="center"
                android:text="@string/player_one"
                android:textAlignment="center"
                android:background="@drawable/text_background"
                android:textColor="@color/white"

                />
            <TextView
                android:id="@+id/tv_first_player_move"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_margin="6dp"
                android:layout_gravity="center"
                android:text="@string/moves"
                android:layout_marginBottom="45dp"
                android:background="@drawable/text_background"
                android:textAlignment="center"
                android:padding="12dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:text="@string/score"
                android:textAlignment="center"
                android:background="@drawable/text_background"
                android:textColor="@color/white"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tv_player_one_score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:text="0"
                android:textSize="35sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="3"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="11dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_first_player"
        android:orientation="vertical">
        <GridLayout
            android:id="@+id/gl_board_first_player"
            android:background="@drawable/water_gradient_color_background"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>